--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,3 +28,6 @@ jobs:
             --security-groups default \
             --user-data file://user-data.sh \
             --tag-specifications 'ResourceType=instance,Tags=[{Key=Name,Value=MonitoringInstance}]'
+
+  - name: Debug file existence
+    run: ls -l || echo "user-data.sh NOT FOUND"
